# S3DK-STRONGgrid

./: CMakeLists.txt  README.md
StrongridBase/: C37118DataTypes.cpp  C37118Protocol.cpp  C37118Protocol.h  CMakeLists.txt  Common.cpp  EncDec.cpp  EncDec.h  common.h
StrongridClientBase/: CMakeLists.txt  PdcClient.cpp  PdcClient.h  TcpClient.cpp  TcpClient.h
StrongridDLL/: CMakeLists.txt  Mutex.cpp  Mutex.h  Strongrid.cpp  Strongrid.h
StrongridDLLStressTest/: CMakeLists.txt  Common.h  main.cpp
docs/: API_Documentation.Md
